automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Write your HTML in this file -->
 <html>
   <head>
-    <a href=""
+    <a href="https://flatironschool.com"> flatironschool</a>
   </head>
+  
 </html>
